2010-03-09  Junichi Satoh <junichi@rworks.jp>

	* include/help/ja : Imported Japanese help files.

2010-03-08  Pablo de la Concepción <pablo.concepcion@artica.es>

	* godmode/agentes/agent_conf_gis.php: Changed some english phrases to make
	 it more clear.

2010-03-08  Pablo de la Concepción <pablo.concepcion@artica.es>

	* godmode/agentes/agent_manager.php: Changed some english phrases to make
	 it more clear.

2010-03-08  Pablo de la Concepción <pablo.concepcion@artica.es>

	* include/functions_gis.php, operation/gis_maps/render_view.php : Changed
	 some english phrases to make it more clear.

2010-03-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/openlayers.pandora.js: deleted the console log debug
	print.

2010-03-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: cleaned source code of "printMap", now it is
	more clean the code because it call the js_printMap only and it haven't the
	num zoom levels.
	
	* include/javascript/openlayers.pandora.js: cleaned source code of
	"js_printMap", now it is more clean the code and it haven't the num zoom
	levels.

	* operation/gis_maps/render_view.php, godmode/setup/gis_step_2.php,
	godmode/gis_maps/configure_gis_map.php: use new form of "printMap" and
	"js_printMap".

2010-03-08  Pablo de la Concepción <pablo.concepcion@artica.es>

	New theme for the maps: New images and background color for the Openlayers
	controls.

	* include/javascript/OpenLayers/OpenLayers.js: Channged background color
	on some components to fit the new theme.

	* include/javascript/OpenLayers/img/south-mini.png, 
	include/javascript/OpenLayers/img/zoom-plus-mini.png, 
	include/javascript/OpenLayers/img/zoom-world-mini.png, 
	include/javascript/OpenLayers/img/zoom-minus-mini.png, 
	include/javascript/OpenLayers/img/zoombar.png, 
	include/javascript/OpenLayers/img/west-mini.png, 
	include/javascript/OpenLayers/img/slider.png, 
	include/javascript/OpenLayers/img/layer-switcher-maximize.png, 