@@ -22,6 +22,8 @@ print_page_header (__('GIS Maps builder'), "images/server_web.png", false, "conf
 
 require_once ('include/functions_gis.php');
 
+$magicQuotesFlag = (boolean)ini_get('magic_quotes_gpc');
+
 require_javascript_file('openlayers.pandora');
 //Global vars for javascript and scripts.
 ?>
@@ -131,7 +133,13 @@ switch ($action) {
 		
 		$arrayLayers = array();
 		foreach ($layer_list as $layerID) {
-			$arrayLayers[] = JSON_decode($_POST['layer_values_' . $layerID], true);
+			if ($magicQuotesFlag) {
+				$layer = stripslashes($_POST['layer_values_' . $layerID]);
+			}
+			else {
+				$layer = $_POST['layer_values_' . $layerID];
+			}
+			$arrayLayers[] = JSON_decode($layer, true);
 		}
 		
 		$invalidFields = validateMapData($map_name, $map_zoom_level,
